Fixed spacing on ios devices and with the footer

--- a/css/index-v2.css
+++ b/css/index-v2.css
@@ -26,8 +26,10 @@ body {
     margin: 0;
     padding: 0;
     position: relative;
-    height: 100vh;
-    overflow: hidden;
+    /* height: 100vh; */
+    /* height: 100%; */
+    min-height: 800px;
+    overflow-x: hidden;
 }
 
 a {
@@ -220,11 +222,11 @@ h1 {
 }
 
 footer {
-    position: absolute;
-    bottom: 0px;
+    /* position: absolute; */
+    /* bottom: 0px; */
     width: 100vw;
     text-align: center;
-    padding-bottom: 1rem;
+    padding-block: 1rem;
 }
 
 .attribution {
